crates/elif-http-derive/tests/ui/fail/get_invalid_path.stderr
error: expected string literal
 --> tests/ui/fail/get_invalid_path.rs:6:7
  |
6 | #[get(invalid_path)]
  |       ^^^^^^^^^^^^
